app/media-server/sabnzbd/sabnzbd-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
spec:
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - image: pmialon/sabnzbd
        imagePullPolicy: Always
        name: sabnzbd
        resources:
          limits:
            cpu: ${PRIORITY_2_CPU_LIMIT:=130m}
          requests:
            cpu: ${PRIORITY_2_CPU_LIMIT:=130m}
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data/usenet
          name: data
          subPath: usenet
        - mountPath: /data/usenet/incomplete
          name: incomplete
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1664
        runAsGroup: 1664
        fsGroup: 1664
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sabnzbd
      - name: data
        persistentVolumeClaim:
          claimName: data
      - name: incomplete
        emptyDir: {}
