app/media-server/sabnzbd/sabnzbd-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
