app/media-server/sabnzbd/sabnzbd-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: sabnzbd
  namespace: media-server
spec:
  ingressClassName: traefik
  rules:
  - host: sabnzbd.${DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: sabnzbd
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sabnzbd.${DOMAIN}
    secretName: sabnzbd.${DOMAIN}
